[gd_scene load_steps=9 format=3 uid="uid://dclbdj6lt5cya"]

[ext_resource type="Script" path="res://Scripts/pig.gd" id="1_idwft"]
[ext_resource type="Texture2D" uid="uid://i1vpykxlislp" path="res://Assets/Animals/pig_walk.png" id="2_4fybe"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rvxm5"]
atlas = ExtResource("2_4fybe")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k50rh"]
atlas = ExtResource("2_4fybe")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ter8u"]
atlas = ExtResource("2_4fybe")
region = Rect2(256, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1i68"]
atlas = ExtResource("2_4fybe")
region = Rect2(384, 384, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5jw8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvxm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k50rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ter8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1i68")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_wir2i"]
radius = 21.4709

[node name="Pig" type="Node2D"]
scale = Vector2(0.557123, 0.557123)
script = ExtResource("1_idwft")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j5jw8")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.100896

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(31, 0)

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-27, 0)

[node name="PlayerArea2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
shape = SubResource("CircleShape2D_wir2i")

[node name="BarnArea2D" type="Area2D" parent="."]
scale = Vector2(1, 1)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarnArea2D"]
shape = SubResource("CircleShape2D_wir2i")

[node name="Weight" type="Node2D" parent="."]
metadata/Weight = 5.0

[connection signal="body_entered" from="PlayerArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="BarnArea2D" to="." method="_on_area_2d_body_entered"]
